# qbalance

./: CMakeLists.txt  LICENSE.GPL  LICENSE.GPL.win  README  default.sql  enterprise.pro  initdb0.sql  initdb1.sql  initdb2.sql  initdb3.sql  initdbext0.sql  qbalance.desktop  qbalance.pro  qbalance.qc  qbalance.sh  qbalance.spec  qbalance.sqlite3  qbalance.xml  qt.conf  resources.qrc
db_updates/: очистка_РАБОЧЕЙ_базы.sql
doc/: Programmer introduction.doc  Programmer manual.doc  User manual.doc  umbrello.xmi  Диаграмма классов ядра (агрегирование).xmi  Общая диаграмма.dia  Общая диаграмма.dia~  Описание БД.html  Планы.odt  Руководство пользователя.doc
forms/: Документ3.ui
reports/: default_report.ods  Документ1.Накладная.ods  Документ1.Накладная.ods.js  Документ1.Накладная.ods.qs  Документ3.ТоварныйЧек.ods  Документ3.ТоварныйЧек.ods.qs
snap/: snapcraft.yaml
src/: app.cpp  app.h  custom.h  dbfactory.cpp  dbfactory.h  definitions.h  dictionaries.cpp  dictionaries.h  dictionary.cpp  dictionary.h  document.cpp  document.h  documents.cpp  documents.h  documenttablemodel.cpp  documenttablemodel.h  essence.cpp  essence.h  formscriptengine.cpp  formscriptengine.h  initdb0.sql  initdb1.sql  initdb2.sql  main.cpp  myscriptengine.cpp  mysqlquery.cpp  mysqlquery.h  mysqlrelationaltablemodel.cpp  mysqlrelationaltablemodel.h  (+24 more)
src/qbalance/: CMakeLists.txt  LICENSE.GPL  LICENSE.GPL.win  definitions.h  fixed.h  license.txt  main.cpp  mpreal.h  qbalance.pro  qrc_resources.cpp  resources.rc  version.h
src/qbalance/bankterminal/: CMakeLists.txt  CMakeLists.txt.qt5  bankterminal.cpp  bankterminal.h  bankterminal.pro  bankterminalplugin.cpp  bankterminalplugin.h
src/qbalance/barcodereader/: CMakeLists.txt  barcodereader.cpp  barcodereader.h  barcodereader.pro  barcodereaderplugin.cpp  barcodereaderplugin.h
src/qbalance/cardcodereader/: CMakeLists.txt  CMakeLists.txt.qt5  cardcodereader.cpp  cardcodereader.h  cardcodereader.pro  cardcodereaderplugin.cpp  cardcodereaderplugin.h
src/qbalance/crashhandler/: CMakeLists.txt  crashhandler.cpp  crashhandler.h  crashhandler.pri
src/qbalance/driverfr/: CMakeLists.txt  cmake_install.cmake  driverfr.cpp  driverfr.h  driverfr.pro  driverfrinterface.cpp  driverfrinterface.h  driverfrplugin.cpp  driverfrplugin.h
src/qbalance/emailclient/: CMakeLists.txt  cmake_install.cmake  emailclient.cpp  emailclient.h  emailclient.pro  emailclientplugin.cpp  emailclientplugin.h
src/qbalance/engine/: CMakeLists.txt  CMakeLists.txt.qt5  documentscriptengine.cpp  documentscriptengine.h  documentsscriptengine.h  eventloop.cpp  eventloop.h  fileinfoclass.cpp  fileinfoclass.h  fileinfoprototype.cpp  fileinfoprototype.h  formscriptengine.cpp  formscriptengine.h  reportcontext.cpp  reportcontext.h  reportcontextfunctions.h  reportscriptengine.cpp  reportscriptengine.h  scriptengine.cpp  scriptengine.h  sqlfieldclass.cpp  sqlfieldclass.h  sqlfieldprototype.cpp  sqlfieldprototype.h  sqlqueryclass.cpp  sqlqueryclass.h  sqlqueryprototype.cpp  sqlqueryprototype.h  sqlrecordclass.cpp  sqlrecordclass.h  sqlrecordprototype.cpp  sqlrecordprototype.h
src/qbalance/engine/bak/: reportcontextfunctions.h.cpp
src/qbalance/gsmmodem/: gsmmodem.cpp  gsmmodem.h  gsmmodem.pro  gsmmodemplugin.cpp  gsmmodemplugin.h
src/qbalance/gui/: CMakeLists.txt  CMakeLists.txt.qt5  calendarform.cpp  calendarform.h  cmake_install.cmake  configform.cpp  configform.h  connectionform.cpp  connectionform.h  dialog.cpp  dialog.h  docparameters.cpp  docparameters.h  form.cpp  form.h  formdocument.cpp  formdocument.h  formdocuments.cpp  formdocuments.h  formgrid.cpp  formgrid.h  formgridsearch.cpp  formgridsearch.h  guifactory.cpp  guifactory.h  mainwindow.cpp  mainwindow.h  messagewindow.cpp  messagewindow.h  mybooleanitemdelegate.cpp  mybooleanitemdelegate.h  mybuttonlineedit.cpp  mybuttonlineedit.h  mybuttonlineedititemdelegate.cpp  mybuttonlineedititemdelegate.h  mycombobox.cpp  mycombobox.h  mydateitemdelegate.cpp  mydateitemdelegate.h  myitemdelegate.cpp  (+37 more)
src/qbalance/gui/bak/: formwidgetplugin.cpp  mytableview.cpp  mytextitemdelegate.h
src/qbalance/kernel/: CMakeLists.txt  app.cpp  app.h  barcodereader.cpp  barcodereader.h  configvars.h  dictionaries.cpp  dictionaries.h  dictionary.cpp  dictionary.h  document.cpp  document.h  documents.cpp  documents.h  essence.cpp  essence.h  report.cpp  report.h  reports.cpp  reports.h  saldo.cpp  saldo.h  table.cpp  table.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  topers.cpp  topers.h  updates.cpp  updates.h
src/qbalance/odfpreviewlib/: odfpreviewlib.cpp  odfpreviewlib.h  odfpreviewlib.pro  odfpreviewlib_global.h
src/qbalance/openoffice/: CMakeLists.txt  ooxmlengine.cpp  ooxmlengine.h  openoffice.cpp  openoffice.h
src/qbalance/plugins/: CMakeLists.txt  CMakeLists.txt.qt5  Makefile  dialogplugin.cpp  dialogplugin.h  docparametersplugin.cpp  docparametersplugin.h  mynumericeditplugin.cpp  mynumericeditplugin.h  myplugins.cpp  myplugins.h  pictureplugin.cpp  pictureplugin.h  plugins.pro  searchparametersplugin.cpp  searchparametersplugin.h  tableviewplugin.cpp  tableviewplugin.h
src/qbalance/report/: CMakeLists.txt  ooreportengine.cpp  ooreportengine.h  oounoreportengine.cpp  oounoreportengine.h  ooxmlreportengine.cpp  ooxmlreportengine.h  report.h  reportengine.cpp  reportengine.h  reports.h
src/qbalance/report/report/: report.pro
src/qbalance/serialport/: CMakeLists.txt  CMakeLists.txt.qt5  qmyextserialport.cpp  qmyextserialport.h
src/qbalance/startup/: CMakeLists.txt  main.cpp  resources.rc  startup.pro
src/qbalance/storage/: CMakeLists.txt  CMakeLists.txt.qt5  dbfactory.cpp  dbfactory.h  filetype.h  fixed.h  fixed_point.h  mymultilist.h  mysqlrelationaltablemodel.cpp  mysqlrelationaltablemodel.h  postgresdbfactory.cpp  postgresdbfactory.h  sqlitedbfactory.cpp  sqlitedbfactory.h
src/qbalance/storage/bak/defaultforms/: vw_прайс.ui
src/qextserialport/: CMakeLists.txt  Makefile  qextserialport.pro
src/qextserialport/src/: qextserialenumerator.cpp  qextserialenumerator_p.h  qextserialenumerator_win.cpp  qextserialport.cpp
(+2684 files in other folders)
