cmake_minimum_required(VERSION 3.10)

add_subdirectory(src/qbalance/bankterminal)
add_subdirectory(src/qbalance/barcodereader)
add_subdirectory(src/qbalance/cardcodereader)
add_subdirectory(src/qbalance/driverfr)
add_subdirectory(src/qbalance/emailclient)
add_subdirectory(src/qbalance/plugins)

add_subdirectory(src/qbalance)

