cmake_minimum_required(VERSION 3.13)
set(CMAKE_BUILD_TYPE "Release")
set(PROJECTNAME emailclient)
project(${PROJECTNAME})
find_package(Qt4 REQUIRED)
set(SOURCE_ROOT ./)
aux_source_directory (${SOURCE_ROOT} SOURCES)
set(LIBRARY_OUTPUT_PATH ${SOURCE_ROOT}/../../../../plugins)
add_library (${PROJECTNAME} MODULE ${SOURCES})
